[package]
name = "twitch_types"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/twitch-rs/twitch_types"
license = "MIT OR Apache-2.0"
description = "common types for Twitch"
keywords = ["twitch", "api"]
readme = "README.md"
include = [
    "src/*",
    "./Cargo.toml",
    "examples/*",
    "./README.md",
    "CHANGELOG.md",
    "LICENSE*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
typed-builder = { version = "0.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_repr = "0.1"
aliri_braid = "0.2"
time = { version = "0.3", optional = true, default-features = false, features = [
    "parsing",
    "formatting",
] }
tracing = { version = "0.1", optional = true }


[features]
default = []

emote = []
moderation = []
points = []
stream = []
timestamp = []
user = []
goal = []
eventsub = []

deny_unknown_fields = []

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "nightly"]
rustdoc-args = ["--cfg", "nightly"]
